# MARKET_MINING

./: .gitignore  README.md  pyproject.toml
analysis/: README.md
analysis/market_mining_analysis/: __init__.py  feature_utils.py  macro_feature_consolidation.py
analysis/outputs/: dashboard_feature_candidates.csv  feature_eligibility.csv  feature_eligibility_latest_summary.json  fred_macro_wide_daily.csv  fred_series_summary.csv  macro_feature_latest_snapshot.csv  macro_features_daily.csv  macro_score_audit.csv  market_regime_audit.csv  market_regime_daily.csv  market_regime_transitions.csv
analysis/tests/: test_feature_eligibility.py  test_fred_macro_analysis.py  test_macro_feature_consolidation.py  test_score_audit.py  test_scoring.py
data_foundation/: README.md
data_foundation/docs/: architecture_boundaries.md  market_mining_macro_first_overall_plan.md
data_foundation/market_mining/: __init__.py  cli.py  logging.py
data_foundation/market_mining_data_mining/: coingecko_btc.py  schemas.py  treasury_tga.py
data_foundation/tests/: test_compat_imports.py  test_config.py  test_defillama_stablecoins.py  test_fred.py  test_import.py  test_treasury_tga.py
data_mining/: README.md
data_mining/configs/: default.yaml
data_mining/docs/: architecture_boundaries.md  codex_task_market_mining_v0_1_macro_scaffold.md  market_mining_stepwise_plan.md  market_mining_v0_1_macro_liquidity_spec.md
data_mining/market_mining/: cli.py  config.py
data_mining/market_mining_data_mining/: __init__.py  defillama_stablecoins.py  validators.py
data_mining/tests/: test_coingecko_btc.py  test_config.py  test_schemas.py
feature_foundation/: README.md
feature_foundation/market_mining_analysis/: regime.py  (+6 more)
monitoring/: README.md
visualization/: README.md
(+48 files in other folders)
