[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-mining"
version = "0.1.0"
description = "Macro-liquidity-first market state mining system for crypto positioning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "plotly",
    "pyyaml",
    "requests",
    "typer",
    "rich",
    "pytest",
    "ruff",
]

[project.scripts]
market-mining = "market_mining.cli:app"

[tool.setuptools.packages.find]
where = ["data_mining", "analysis", "visualization"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["data_mining/tests", "analysis/tests", "visualization/tests"]
pythonpath = ["data_mining", "analysis", "visualization"]
