[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-mining"
version = "0.1.0"
description = "Macro-liquidity-first market state mining system for crypto positioning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "plotly",
    "pyyaml",
    "requests",
    "typer",
    "rich",
    "pytest",
    "ruff",
]

[project.scripts]
market-mining = "market_mining.cli:app"

[tool.setuptools.packages.find]
where = ["data_foundation", "feature_foundation", "monitoring"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["data_foundation/tests", "feature_foundation/tests", "monitoring/tests"]
pythonpath = ["data_foundation", "feature_foundation", "monitoring"]
